--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ faker = "^15.1.1"
 pytest-asyncio = "^0.20.2"
 
 [tool.isort]
+skip_glob = ["**/__init__.py"]
 use_parentheses = true
 reverse_relative = true
 include_trailing_comma = true
