--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ motor = "^3.1.1"
 beanie = "^1.13.1"
 dependency-injector = "^4.40.0"
 python-dotenv = "^0.21.0"
+httpx = "^0.23.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest-bdd = "^6.0.1"
