--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-API_HOST="0.0.0.0"
-# API_HOST="127.0.0.1"
+# API_HOST="0.0.0.0"
+API_HOST="127.0.0.1"
 API_PORT=5000
-MONGO_URL="mongodb://mongo:27017/inventary_dev"
-# MONGO_URL="mongodb://localhost:27017/inventary_dev"
+# MONGO_URL="mongodb://mongo:27017/inventary_dev"
+MONGO_URL="mongodb://localhost:27017/inventary_dev"
 EXTERNAL_PARTY_SERVICE="https://638391421ada9475c80319c0.mockapi.io/api/discounts"
 CACHE_TTL=300
 # TESTS
-TEST_MONGO_URL="mongodb://mongo:27017/inventary_test"
-# TEST_MONGO_URL="mongodb://localhost:27017/inventary_test"
+# TEST_MONGO_URL="mongodb://mongo:27017/inventary_test"
+TEST_MONGO_URL="mongodb://localhost:27017/inventary_test"
